--- a/unsupervised-learning-challenge-main/index.html
+++ b/unsupervised-learning-challenge-main/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1> Welcome to My Supervised Machine Learning Repo </h1>
     <p> Here is what I've done:</p>
-    <a href="https://khadra1.github.io/unsupervised-learning-challenge/"> link to the repo</a>
+    <a href="https://github.com/xzhoward/unsupervised-machine-learning-challenge.git"> link to the repo</a>
 </body>
 </html>
